add sentry readiness check
